add prefix symbol to asset

--- a/Backoffice/Components/Assets/AssetDetailsDialog.razor
+++ b/Backoffice/Components/Assets/AssetDetailsDialog.razor
@@ -13,6 +13,7 @@
                 <tr><td>Symbol</td><td class="float-left">@Item.Asset.Symbol</td></tr>
                 <tr></tr>
                 <tr><td>Description</td><td class="float-left">@Item.Asset.Description</td></tr>
+                <tr><td>Prefix Symbol</td><td class="float-left">@Item.Asset.PrefixSymbol</td></tr>
                 <tr><td>Accuracy</td><td class="float-left">@Item.Asset.Accuracy</td></tr>
                 <tr><td>IsEnabled</td><td class="float-left">@Item.Asset.IsEnabled</td></tr>
                 
