--- a/Backoffice/Components/Assets/AssetDetailsDialogEdit.razor
+++ b/Backoffice/Components/Assets/AssetDetailsDialogEdit.razor
@@ -51,6 +51,12 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>Prefix Symbol</td>
+                        <td class="float-left">
+                            <input type="text" class="form-control" @bind="Item.Asset.PrefixSymbol"/>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>Accuracy</td>
                         <td class="float-left">
                             <input type="number" class="form-control" @bind="Item.Asset.Accuracy"/>
