--- a/Backoffice/Components/Assets/AssetListComponent.razor
+++ b/Backoffice/Components/Assets/AssetListComponent.razor
@@ -18,6 +18,7 @@
         <tr>
             <th>Symbol</th>
             <th>Description</th>
+            <th>PreSym</th>
             <th>Enabled</th>
             <th>Accuracy</th>
             <th>Deposit</th>
