--- a/Backoffice/Components/Assets/AssetTableRow.razor
+++ b/Backoffice/Components/Assets/AssetTableRow.razor
@@ -12,6 +12,7 @@
 <tr style="@(!Item.Asset.IsEnabled ? "background: lightgray" : "")">
     <td>@Item.Asset.Symbol</td>
     <td>@Item.Asset.Description</td>
+    <td>@Item.Asset.PrefixSymbol</td>
     <td style="@(!Item.Asset.IsEnabled ? "background: red" : "")">@Item.Asset.IsEnabled</td>
     <td>@Item.Asset.Accuracy</td>
     
