--- a/Backoffice/Components/Prices/CandleHistoryHttp.razor
+++ b/Backoffice/Components/Prices/CandleHistoryHttp.razor
@@ -5,6 +5,7 @@
 @using Newtonsoft.Json
 @using SimpleTrading.CandlesHistory.Grpc.Contracts
 @using SimpleTrading.CandlesHistory.Grpc.Models
+@using SimpleTrading.Abstraction.Candles;
 
 @inject ILogger<CandleHistoryHttp> _logger
 
@@ -25,10 +26,10 @@
     <div class="row">
         <span>time frame: </span>
         <select @bind="_timeFrame" style="width: 100px">
-            <option value=@CandleTypeGrpcModel.Minute>Minute</option>
-            <option value=@CandleTypeGrpcModel.Hour>Hour</option>
-            <option value=@CandleTypeGrpcModel.Day>Day</option>
-            <option value=@CandleTypeGrpcModel.Month>Month</option>
+            <option value=@CandleType.Minute>Minute</option>
+            <option value=@CandleType.Hour>Hour</option>
+            <option value=@CandleType.Day>Day</option>
+            <option value=@CandleType.Month>Month</option>
         </select>
     </div>
     <div class="row">
@@ -87,7 +88,7 @@
     private string _authToken;
     private string _instruction;
 
-    private CandleTypeGrpcModel _timeFrame = CandleTypeGrpcModel.Day;
+    private CandleType _timeFrame = CandleType.Day;
 
     private int IsBid = 1;
 
