--- a/Backoffice/Components/References/ExternalTikerSettingsComponent.razor
+++ b/Backoffice/Components/References/ExternalTikerSettingsComponent.razor
@@ -2,6 +2,7 @@
 @using Service.NewsImporter.Domain.NoSql
 @using Service.NewsImporter.Grpc
 @using Microsoft.AspNetCore.Components
+@using Service.NewsImporter.Grpc.Models
 
 @inject IExternalTickerSettingsService _externalTickerSettingsService;
 
