--- a/Backoffice/Pages/References.razor
+++ b/Backoffice/Pages/References.razor
@@ -16,7 +16,7 @@
         <button class="nav-link @CheckActive(Menus.News)" @onclick="SetNews" >News</button>
     </li>
     <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.ExternalTickerSettings)" @onclick="SetExternalTickerSettings" >External Tikcer Settings</button>
+        <button class="nav-link @CheckActive(Menus.ExternalTickerSettings)" @onclick="SetExternalTickerSettings" >External Ticker Settings</button>
     </li>
 </ul>
 
