current date for blocker

--- a/Backoffice/Components/Clients/ClientProfileComponent.razor
+++ b/Backoffice/Components/Clients/ClientProfileComponent.razor
@@ -110,6 +110,7 @@
     
     private async Task ShowAddBlocker()
     {
+        _newBlocker.ExpiryTime = DateTime.UtcNow;
         _isShowAddDialog = true;
     }
 
