--- a/Backoffice/Components/MarketInfo/News/NewsComponent.razor
+++ b/Backoffice/Components/MarketInfo/News/NewsComponent.razor
@@ -22,6 +22,7 @@
         <th>Description</th>
         <th>Lang</th>
         <th>Source</th>
+        <th>Integration Source</th>
         <th>Sentiment</th>
         <th>UrlAddress</th>
         <th>ImageUrl</th>
@@ -43,6 +44,7 @@
             <td>@news.Description</td>
             <td>@news.Lang</td>
             <td>@news.Source</td>
+            <td>@news.IntegrationSource</td>
             <td>@news.Sentiment</td>
             <td>@news.UrlAddress</td>
             <td>@news.ImageUrl</td>
