bitgo network for the coin

--- a/Backoffice/Components/BitGo/Coins/BitGoCoinDetailsDialogEdit.razor
+++ b/Backoffice/Components/BitGo/Coins/BitGoCoinDetailsDialogEdit.razor
@@ -38,6 +38,12 @@
                             <input type="number" class="form-control" @bind="Item.RequiredConfirmations"/>
                         </td>
                     </tr>
+                    <tr>
+                        <td>MAIN network</td>
+                        <td class="float-left">
+                            <input type="checkbox" class="form-control" @bind="Item.IsMainNet"/>
+                        </td>
+                    </tr>
                 </table>
             </td>
 
