--- a/Backoffice/Components/BitGo/Coins/BitGoCoinListComponent.razor
+++ b/Backoffice/Components/BitGo/Coins/BitGoCoinListComponent.razor
@@ -17,6 +17,7 @@
             <th>BitGo coin</th>
             <th>Accuracy</th>
             <th>Required confirmations</th>
+            <th>Network</th>
             <th></th>
         </tr>
     </thead>
