--- a/Backoffice/Components/BitGo/Coins/BitGoCoinTableRow.razor
+++ b/Backoffice/Components/BitGo/Coins/BitGoCoinTableRow.razor
@@ -10,6 +10,7 @@
     <td>@Item.Coin</td>
     <td>@Item.Accuracy</td>
     <td>@Item.RequiredConfirmations</td>
+    <td>@(Item.IsMainNet ? "MAIN" : "testnet")</td>
 
     <td>
         <ul class="nav">
