--- a/Backoffice/Components/BitGo/Coins/BitGoCoinDetailsDialog.razor
+++ b/Backoffice/Components/BitGo/Coins/BitGoCoinDetailsDialog.razor
@@ -15,6 +15,11 @@
                     <tr>
                         <td>Required confirmations</td><td class="float-left">@Item.RequiredConfirmations</td>
                     </tr>
+                    <tr>
+                        <td>Network</td><td class="float-left">
+                            @(Item.IsMainNet ? "MAIN" : "testnet")
+                        </td>
+                    </tr>
                 </table>
             </td>
         </tr>
