--- a/Backoffice/Components/BitGo/Coins/BitGoCoinDetailsDialogEdit.razor
+++ b/Backoffice/Components/BitGo/Coins/BitGoCoinDetailsDialogEdit.razor
@@ -41,7 +41,7 @@
                     <tr>
                         <td>MAIN network</td>
                         <td class="float-left">
-                            <input type="checkbox" class="form-control" @bind="Item.IsMainNet"/>
+                            <input type="checkbox" @bind="Item.IsMainNet" />
                         </td>
                     </tr>
                 </table>
